[tool.poetry]
name = "jinja2-python-version"
version = "1.1.2"
description = "A Jinja2 extension that adds python version to templates."
authors = ["Federico Jaramillo Martínez <federicojaramillom@gmail.com>"]

license = "BSD-3-Clause"

readme = "README.rst"

repository = "https://github.com/jmfederico/jinja2-python-version"
homepage = "https://github.com/jmfederico/jinja2-python-version"

keywords = ["jinja2", "extension", "python", "versions"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
]


[tool.poetry.dependencies]
python = "^2.7 || >=3.4"
Jinja2 = "^2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
