[project]
name = "jinja2-python-version"
version = "1.2.0.dev0"
description = "A Jinja2 extension that adds python version to templates."
authors = [
    { name = "Federico Jaramillo Martinez", email = "federicojaramillom@gmail.com" },
]
dependencies = ["Jinja2>=2.0"]
readme = "README.rst"
license = { text = "BSD-3-Clause" }
keywords = ["jinja2", "jinja3", "extension", "python", "versions"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
]

[project.urls]
homepage = "https://github.com/jmfederico/jinja2-python-version"
repository = "https://github.com/jmfederico/jinja2-python-version"

[tool.pdm]

[tool.pdm.build]
includes = ['jinja2_python_version']

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
